--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 	<title>Nina Carducci - Photographe professionnelle à Bordeaux</title>
 	<meta name="description"
-		content="Photographe professionnel à Bordeaux, je suis spécialisé dans le mariage, couple, famille ou encore grossesse">
+		content="Photographe professionnel à Bordeaux, je suis spécialisée dans le mariage, couple, famille ou encore grossesse">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
 	<link rel="stylesheet" href="./assets/style.css">
@@ -49,16 +49,16 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata-wUZjnOv7t0g-unsplash.jpg" class="d-block w-100"
-						alt="...">
+					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100"
+						alt="photo d'un homme Japonais marchant de dos">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green-nPz8akkUmDI-unsplash.jpg" class="d-block w-100"
-						alt="...">
+					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100"
+						alt="photo d'un groupe de jeunes durant un concert">
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros-3_h6-1NPDGw-unsplash.jpg" class="d-block w-100"
-						alt="...">
+					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100"
+						alt="photo d'un baiser lors d'un mariage">
 				</div>
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
@@ -75,7 +75,7 @@
 	</div>
 	<div id="about">
 		<div class="picture left">
-			<img src="./assets/images/nina.png" alt="Nina Carducci - Photographe professionnelle>
+			<img src="./assets/images/nina.webp" alt="Nina Carducci - Photographe professionnelle">
 		</div>
 		<div id="about-me">
 			<h2 class="about-me__title">A propos de moi</h2>
@@ -95,24 +95,34 @@
 		<div class="container py-3">
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/aaron-paul-wnX-fXzB6Cw-unsplash.jpg" />
+					src="./assets/images/gallery/concerts/aaron-paul.webp"
+					alt="photo d'une foule durant un concert" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/ali-morshedlou-WMD64tMfc4k-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/ali-morshedlou.webp"
+					alt="photo d'un homme en costume de travail" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/jason-goodman-tHO1_OuKbg0-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/jason-goodman.webp"
+					alt="photo de 2 femmes qui sourient" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/hannah-busing-RvF2R_qMpRk-unsplash.jpg" />
+					src="./assets/images/gallery/mariage/hannah-busing.webp"
+					alt="photo de 2 personnes se donnant les mains" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/ade-tunji-rVkhWWZFAtQ-unsplash.jpg" />
+					src="./assets/images/gallery/portraits/ade-tunji.webp"
+					alt="photo d'un homme clignant des yeux" />
 				<img data-gallery-tag="Mariages" class="gallery-item"
-					src="./assets/images/gallery/mariage/jakob-owens-SiniLJkXhMc-unsplash.jpg" />
+					src="./assets/images/gallery/mariage/jakob-owens.webp"
+					alt="photo d'un couple de mariés" />
 				<img data-gallery-tag="Portrait" class="gallery-item"
-					src="./assets/images/gallery/portraits/nino-van-prattenburg--443cl1uR_8-unsplash.jpg" />
+					src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"
+					alt="photo d'une jeune femme devant une grille" />
 				<img data-gallery-tag="Concert" class="gallery-item"
-					src="./assets/images/gallery/concerts/austin-neill-hgO1wFPXl3I-unsplash.jpg" />
+					src="./assets/images/gallery/concerts/austin-neill.webp"
+					alt="photo d'un chanteur sur scène" />
 				<img data-gallery-tag="Entreprises" class="gallery-item"
-					src="./assets/images/gallery/entreprise/mateus-campos-felipe-Fsgzm8N0hIY-unsplash.jpg" />
+					src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"
+					alt="photo d'une femme souriante sur son ordinateur portable" />
 			</div>
+
 		</div>
 		<div class="quote">
 			<figure>
@@ -135,8 +145,8 @@
 						Île-de-France pour réaliser vos photos</p>
 				</div>
 				<div class="service__price">
-					<p>350€/demi journée</p>
-					<span>Matériel, déplacement inclus</span>
+					<span class="price">350€/demi journée</span>
+					<p>Matériel, déplacement inclus</p>
 				</div>
 
 			</div>
@@ -147,8 +157,8 @@
 						optimal pour vos publications</p>
 				</div>
 				<div class="service__price">
-					<p>50€/photo</p>
-					<span>2 AR par photo</span>
+					<span class="price">50€/photo</span>
+					<p>2 AR par photo</p>
 				</div>
 			</div>
 			<div class="service">
@@ -158,8 +168,8 @@
 						album photo personnalisé</p>
 				</div>
 				<div class="service__price">
-					<p>400€ album A4</p>
-					<span>30 pages recto/verso</span>
+					<span class="price">400€ album A4</span>
+					<p>30 pages recto/verso</p>
 				</div>
 			</div>
 		</div>
@@ -189,7 +199,7 @@
 				</form>
 			</div>
 			<div class="picture right">
-				<img src="./assets/images/camera.png" alt="caméra">
+				<img src="./assets/images/camera.webp" alt="caméra">
 			</div>
 		</div>
 	</div>
