--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 	<meta name="description"
 		content="Photographe professionnel à Bordeaux, je suis spécialisée dans le mariage, couple, famille ou encore grossesse">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
-	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.css">
+	<link rel="stylesheet" href="./assets/bootstrap/bootstrap.min.css">
 	<link rel="stylesheet" href="./assets/style.css">
 	<link rel="preconnect" href="https://fonts.googleapis.com">
 	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,11 +14,56 @@
 		href="https://fonts.googleapis.com/css2?family=Inter&family=Spectral:ital,wght@0,400;1,300;1,400;1,800&display=swap"
 		rel="stylesheet">
 	<meta charset="UTF-8">
-	<script defer src="./assets/bootstrap/bootstrap.bundle.js"></script>
-	<script src="https://code.jquery.com/jquery-3.4.1.min.js"
+	<script defer src="./assets/bootstrap/bootstrap.bundle.min.js"></script>
+	<script defer src="https://code.jquery.com/jquery-3.4.1.min.js"
 		integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
 	<script defer src="./assets/maugallery.js"></script>
 	<script defer src="./assets/scripts.js"></script>
+
+	<meta property="og:site_name" content="Nina Carducci, Photographe">
+	<meta property="og:type" content="website">
+	<meta property="og:url" content="https://alexgo-dev.github.io/P9-Nina_Carducci/">
+	<meta property="og:description" content="Nina Carducci, Photographe professionnelle sur Bordeaux">
+	<meta property="og:image" content="https://alexgo-dev.github.io/P9-Nina_Carducci/assets/images/nina.webp">
+
+	<meta name="twitter:card" content="summary_large_image">
+	<meta name="twitter:title" content="Nina Carducci, Photographe">
+	<meta name="twitter:description" content="Nina Carducci, Photographe professionnelle sur Bordeaux">
+	<meta name="twitter:image" content="https://alexgo-dev.github.io/P9-Nina_Carducci/assets/images/nina.webp">
+	<meta name="twitter:url" content="https://alexgo-dev.github.io/P9-Nina_Carducci/">
+
+
+	<script type="application/ld+json">
+		{
+		  "@context": "https://schema.org",
+		  "@type": "LocalBusiness",
+		  "name": "Nina Carducci",
+		  "image": "https://ninacarducci.github.io/assets/images/nina.png",
+		  "@id": "",
+		  "url": "http://ninacarducci.github.io",
+		  "telephone": "0556677889",
+		  "priceRange": "50€-400€",
+		  "address": {
+			"@type": "PostalAddress",
+			"streetAddress": "68 avenue Alsace-Lorraine",
+			"addressLocality": "Bordeaux",
+			"postalCode": "33200",
+			"addressCountry": "FR"
+		  },
+		  "openingHoursSpecification": {
+			"@type": "OpeningHoursSpecification",
+			"dayOfWeek": [
+			  "Monday",
+			  "Tuesday",
+			  "Wednesday",
+			  "Thursday",
+			  "Friday"
+			],
+			"opens": "10:00",
+			"closes": "19:00"
+		  } 
+		}
+		</script>
 </head>
 
 <body>
@@ -49,17 +94,27 @@
 			</div>
 			<div class="carousel-inner">
 				<div class="carousel-item active">
-					<img src="./assets/images/slider/ryoji-iwata.webp" class="d-block w-100"
-						alt="photo d'un homme Japonais marchant de dos">
+					<picture>
+						<source media="(max-width: 768px)" srcset="./assets/images/slider/ryoji-iwata768.webp">
+						<img src="./assets/images/slider/ryoji-iwata.webp" fetchpriority="high" class="d-block w-100"
+							alt="photo d'un homme Japonais marchant de dos">
+					</picture>
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100"
-						alt="photo d'un groupe de jeunes durant un concert">
+					<picture>
+						<source media="(max-width: 768px)" srcset="./assets/images/slider/nicholas-green768.webp">
+						<img src="./assets/images/slider/nicholas-green.webp" class="d-block w-100"
+							alt="photo d'un groupe de jeunes durant un concert">
+					</picture>
 				</div>
 				<div class="carousel-item">
-					<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100"
-						alt="photo d'un baiser lors d'un mariage">
+					<picture>
+						<source media="(max-width: 768px)" srcset="./assets/images/slider/edward-cisneros768.webp">
+						<img src="./assets/images/slider/edward-cisneros.webp" class="d-block w-100"
+							alt="photo d'un baiser lors d'un mariage">
+					</picture>
 				</div>
+
 			</div>
 			<button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators"
 				data-bs-slide="prev">
@@ -96,32 +151,59 @@
 			<div class="gallery" style="display: none">
 				<img data-gallery-tag="Concert" class="gallery-item"
 					src="./assets/images/gallery/concerts/aaron-paul.webp"
-					alt="photo d'une foule durant un concert" />
+					srcset="./assets/images/gallery/concerts/aaron-paul.webp 1000w, ./assets/images/gallery/concerts/aaron-paul320.webp 320w"
+					sizes="100vw"
+					alt="photo d'une foule durant un concert">
+			
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/ali-morshedlou.webp"
-					alt="photo d'un homme en costume de travail" />
+					srcset="./assets/images/gallery/entreprise/ali-morshedlou.webp 1000w, ./assets/images/gallery/entreprise/ali-morshedlou320.webp 320w"
+					sizes="100vw"
+					alt="photo d'un homme en costume de travail">
+			
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/jason-goodman.webp"
-					alt="photo de 2 femmes qui sourient" />
+					srcset="./assets/images/gallery/entreprise/jason-goodman.webp 1000w, ./assets/images/gallery/entreprise/jason-goodman320.webp 320w"
+					sizes="100vw"
+					alt="photo de 2 femmes qui sourient">
+			
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					src="./assets/images/gallery/mariage/hannah-busing.webp"
-					alt="photo de 2 personnes se donnant les mains" />
+					srcset="./assets/images/gallery/mariage/hannah-busing.webp 1000w, ./assets/images/gallery/mariage/hannah-busing320.webp 320w"
+					sizes="100vw"
+					alt="photo de 2 personnes se donnant les mains">
+			
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					src="./assets/images/gallery/portraits/ade-tunji.webp"
-					alt="photo d'un homme clignant des yeux" />
+					srcset="./assets/images/gallery/portraits/ade-tunji.webp 1000w, ./assets/images/gallery/portraits/ade-tunji320.webp 320w"
+					sizes="100vw"
+					alt="photo d'un homme clignant des yeux">
+			
 				<img data-gallery-tag="Mariages" class="gallery-item"
 					src="./assets/images/gallery/mariage/jakob-owens.webp"
-					alt="photo d'un couple de mariés" />
+					srcset="./assets/images/gallery/mariage/jakob-owens.webp 1000w, ./assets/images/gallery/mariage/jakob-owens320.webp 320w"
+					sizes="100vw"
+					alt="photo d'un couple de mariés">
+			
 				<img data-gallery-tag="Portrait" class="gallery-item"
 					src="./assets/images/gallery/portraits/nino-van-prattenburg.webp"
-					alt="photo d'une jeune femme devant une grille" />
+					srcset="./assets/images/gallery/portraits/nino-van-prattenburg.webp 1000w, ./assets/images/gallery/portraits/nino-van-prattenburg320.webp 320w"
+					sizes="100vw"
+					alt="photo d'une jeune femme devant une grille">
+			
 				<img data-gallery-tag="Concert" class="gallery-item"
 					src="./assets/images/gallery/concerts/austin-neill.webp"
-					alt="photo d'un chanteur sur scène" />
+					srcset="./assets/images/gallery/concerts/austin-neill.webp 1000w, ./assets/images/gallery/concerts/austin-neill320.webp 320w"
+					sizes="100vw"
+					alt="photo d'un chanteur sur scène">
+			
 				<img data-gallery-tag="Entreprises" class="gallery-item"
 					src="./assets/images/gallery/entreprise/mateus-campos-felipe.webp"
-					alt="photo d'une femme souriante sur son ordinateur portable" />
+					srcset="./assets/images/gallery/entreprise/mateus-campos-felipe.webp 1000w, ./assets/images/gallery/entreprise/mateus-campos-felipe320.webp 320w"
+					sizes="100vw"
+					alt="photo d'une femme souriante sur son ordinateur portable">
 			</div>
+			
 
 		</div>
 		<div class="quote">
@@ -188,14 +270,14 @@
 			<div class="form-container">
 				<h3>Une question ? Une demande de devis ?</h3>
 				<p> N'hésitez pas à m'écrire ! Je vous répondrais en moins de 24 heures</p>
-				<form action="" method="post">
+				<form action="#" method="post">
 					<label for="name">Nom</label>
 					<input type="text" name="name" id="name">
 					<label for="email">Email</label>
 					<input type="email" name="email" id="email">
 					<label for="message">Message</label>
 					<textarea name="message" id="message" cols="30" rows="10"></textarea>
-					<input type="submit" value="Envoyer" />
+					<input type="submit" value="Envoyer">
 				</form>
 			</div>
 			<div class="picture right">
